logs/xcom-example/load_into_db/2021-03-11T23:44:11.599409+00:00/1.log
[2021-03-11 23:44:16,702] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: xcom-example.load_into_db 2021-03-11T23:44:11.599409+00:00 [queued]>
[2021-03-11 23:44:16,767] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: xcom-example.load_into_db 2021-03-11T23:44:11.599409+00:00 [queued]>
[2021-03-11 23:44:16,768] {taskinstance.py:1042} INFO - 
--------------------------------------------------------------------------------
[2021-03-11 23:44:16,770] {taskinstance.py:1043} INFO - Starting attempt 1 of 2
[2021-03-11 23:44:16,772] {taskinstance.py:1044} INFO - 
--------------------------------------------------------------------------------
[2021-03-11 23:44:16,795] {taskinstance.py:1063} INFO - Executing <Task(PythonOperator): load_into_db> on 2021-03-11T23:44:11.599409+00:00
[2021-03-11 23:44:16,801] {standard_task_runner.py:52} INFO - Started process 80 to run task
[2021-03-11 23:44:16,812] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'xcom-example', 'load_into_db', '2021-03-11T23:44:11.599409+00:00', '--job-id', '20', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/airflow-xcom-example.py', '--cfg-path', '/tmp/tmpjawndwyr', '--error-file', '/tmp/tmpen72eiae']
[2021-03-11 23:44:16,814] {standard_task_runner.py:77} INFO - Job 20: Subtask load_into_db
[2021-03-11 23:44:16,883] {logging_mixin.py:104} INFO - Running <TaskInstance: xcom-example.load_into_db 2021-03-11T23:44:11.599409+00:00 [running]> on host 7d27dd48eb07
[2021-03-11 23:44:16,958] {taskinstance.py:1257} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_EMAIL=tom.karaffa@deep-labs.com
AIRFLOW_CTX_DAG_OWNER=tom.karaffa
AIRFLOW_CTX_DAG_ID=xcom-example
AIRFLOW_CTX_TASK_ID=load_into_db
AIRFLOW_CTX_EXECUTION_DATE=2021-03-11T23:44:11.599409+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2021-03-11T23:44:11.599409+00:00
[2021-03-11 23:44:16,987] {taskinstance.py:1455} ERROR - (psycopg2.errors.SyntaxError) syntax error at or near "["
LINE 4:         VALUES [1, 2222, 222222];
                       ^

[SQL: 
        INSERT INTO airflow_xcom_example.example_table_doubled(
            doubled_id, column1_doubled, column2_doubled)
        VALUES [1, 2222, 222222];
        ]
(Background on this error at: http://sqlalche.me/e/13/f405)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.6/site-packages/sqlalchemy/engine/base.py", line 1277, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.6/site-packages/sqlalchemy/engine/default.py", line 608, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "["
LINE 4:         VALUES [1, 2222, 222222];
                       ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1112, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1285, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1315, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 117, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 128, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/airflow-xcom-example.py", line 73, in load_into_db
    conn.execute(db_statement)
  File "/home/airflow/.local/lib/python3.6/site-packages/sqlalchemy/engine/base.py", line 1003, in execute
    return self._execute_text(object_, multiparams, params)
  File "/home/airflow/.local/lib/python3.6/site-packages/sqlalchemy/engine/base.py", line 1178, in _execute_text
    parameters,
  File "/home/airflow/.local/lib/python3.6/site-packages/sqlalchemy/engine/base.py", line 1317, in _execute_context
    e, statement, parameters, cursor, context
  File "/home/airflow/.local/lib/python3.6/site-packages/sqlalchemy/engine/base.py", line 1511, in _handle_dbapi_exception
    sqlalchemy_exception, with_traceback=exc_info[2], from_=e
  File "/home/airflow/.local/lib/python3.6/site-packages/sqlalchemy/util/compat.py", line 182, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.6/site-packages/sqlalchemy/engine/base.py", line 1277, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.6/site-packages/sqlalchemy/engine/default.py", line 608, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near "["
LINE 4:         VALUES [1, 2222, 222222];
                       ^

[SQL: 
        INSERT INTO airflow_xcom_example.example_table_doubled(
            doubled_id, column1_doubled, column2_doubled)
        VALUES [1, 2222, 222222];
        ]
(Background on this error at: http://sqlalche.me/e/13/f405)
[2021-03-11 23:44:16,994] {taskinstance.py:1503} INFO - Marking task as UP_FOR_RETRY. dag_id=xcom-example, task_id=load_into_db, execution_date=20210311T234411, start_date=20210311T234416, end_date=20210311T234416
[2021-03-11 23:44:17,027] {local_task_job.py:146} INFO - Task exited with return code 1
